# esp32-kvm-usb-mouse-keyboard-switcher

./: .gitignore  LICENSE  README.md
3d_models/: box-Pocket008 (Meshed).stl  box.FCStd  box_cover_1-Pocket008 (Meshed)001.stl  box_cover_1.FCStd
docs/: README.md  README_zh.md
docs/screenshots/: flash_addresses.md  flash_addresses_zh.md
firmware/: CMakeLists.txt  sdkconfig
firmware/main/: CMakeLists.txt  ch9350_led_switch.c
